# SaveTheKing

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  controler.h
include/GameManager/: GameManager.h  collisionHandled.h
include/GameObject/: CMakeLists.txt  GameObject.h
include/GameObject/MoveAble/: Dwarf.h  KIng.h  Mage.h  Moveable.h  Player.h  Solider.h  Thief.h
include/GameObject/UnMoveAble/: CMakeLists.txt  Fire.h  Gate.h  Key.h  Orc.h  Teleport.h  TeleportManager.h  Throne.h  UnMoveAble.h  Wall.h
include/LevelManager/: Data.h  Level.h  LevelManager.h
include/Resources/: Resources.h  ResourcesFont.h  ResourcesPicture.h  ResourecsSound.h
include/TimeClock/: TimeClock.h
include/menue/: CMakeLists.txt  menue.h
include/menue/Instructions/: Instructions.h
include/statusLine/: StatusLine.h  StatusLineGui.h
resources/: CMakeLists.txt
resources/font/: CMakeLists.txt
resources/images/: CMakeLists.txt
resources/levels/: CMakeLists.txt  Level1.txt  Level10.txt  Level11.txt  Level12.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt  Level6.txt  Level7.txt  Level8.txt  Level9.txt
resources/musicEffects/: CMakeLists.txt
src/: CMakeLists.txt  controler.cpp  main.cpp
src/GameManager/: CMakeLists.txt  GameManager.cpp  collisionHandled.cpp
src/GameObject/: CMakeLists.txt  GameObject.cpp
src/GameObject/MoveAble/: CMakeLists.txt  Dwarf.cpp  KIng.cpp  Mage.cpp  MoveAble.cpp  Player.cpp  Solider.cpp  Thief.cpp
src/GameObject/UnMoveAble/: CMakeLists.txt  Fire.cpp  Gate.cpp  Key.cpp  Orc.cpp  Teleport.cpp  TeleportManager.cpp  Throne.cpp  UnMoveAble.cpp  Wall.cpp
src/GameObject/UnMoveAble/Gift/: CMakeLists.txt  Gift.cpp  GiftDwarfRemover.cpp  GiftTime.cpp  GiftTimeAdd.cpp  GiftTimeDecrease.cpp
src/LevelManager/: CMakeLists.txt  Data.cpp  Level.cpp  LevelManager.cpp
src/Resources/: CMakeLists.txt  ResourcesFont.cpp  ResourcesPicture.cpp  ResourcesSound.cpp
src/TimeClock/: CMakeLists.txt  TimeClock.cpp
src/menue/: CMakeLists.txt  menue.cpp
src/menue/Instructions/: CMakeLists.txt  Instructions.cpp
src/menue/LevelMenue/: CMakeLists.txt  Control.cpp  Controls.cpp  Exit.cpp  LevelMenue.cpp  Next.cpp  Play.cpp  selectLevel.cpp
src/statusLine/: CMakeLists.txt  StatusLine.cpp  StatusLineGui.cpp
(+12 files in other folders)
